--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<a href="carousel/index.html">carousel</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Snippets</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 20px;
+            min-height: 100vh;
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            font-family: system-ui, -apple-system, sans-serif;
+        }
+
+        .snippets-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            gap: 12px;
+            min-width: 200px;
+        }
+
+        .snippets-list a {
+            display: block;
+            padding: 12px 20px;
+            text-decoration: none;
+            color: #333;
+            background: #f5f5f5;
+            border-radius: 6px;
+            transition: all 0.2s ease;
+        }
+
+        .snippets-list a:hover {
+            background: #e5e5e5;
+            transform: translateY(-2px);
+        }
+    </style>
+</head>
+<body>
+    <ul class="snippets-list">
+        <li><a href="carousel/index.html">Carousel</a></li>
+    </ul>
+</body>
+</html>
