--- a/word-cloud/index.html
+++ b/word-cloud/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Word Graph Visualization</title>
+    <title>3D Word Cloud</title>
     <style>
         body {
             margin: 0;
@@ -16,37 +16,6 @@
             width: 100%;
             height: 100%;
         }
-        #controls {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            z-index: 100;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
-            border-radius: 5px;
-            color: white;
-        }
-        button {
-            padding: 8px 12px;
-            margin: 5px;
-            cursor: pointer;
-            background-color: #4444aa;
-            color: white;
-            border: none;
-            border-radius: 4px;
-        }
-        button:hover {
-            background-color: #5555cc;
-        }
-        button.active {
-            background-color: #6666ee;
-            box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-        }
-        .button-group {
-            margin-top: 10px;
-            border-top: 1px solid rgba(255, 255, 255, 0.2);
-            padding-top: 10px;
-        }
         .node-label {
             transition: all 0.3s ease;
         }
@@ -54,17 +23,6 @@
 </head>
 <body>
     <div id="container"></div>
-    <div id="controls">
-        <div>
-            <button id="defaultWords">Default Words</button>
-            <button id="customWords">Custom Words</button>
-        </div>
-        <div class="button-group">
-            <button id="toggleAnimation" class="active">Animation: ON</button>
-            <button id="toggleLabels" class="active">Labels: ON</button>
-        </div>
-    </div>
-
     <script type="module" src="app.js"></script>
 </body>
 </html>
